# emission-predict

./: .gitignore  CMakeLists.txt  README.md  README.ru.md
lib/: CMakeLists.txt  Window.cpp  Window.h  csv.cpp  csv.h  csv_reader.cpp  csv_reader.h  fltk.h  graph_lib.h
lib/graph_lib/: CMakeLists.txt  Objects.cpp  Objects.h  Window.cpp  Window.h  fltk.h  fltk_design.h
lib/graph_lib_old/: CMakeLists.txt  GUI.cpp  GUI.h  Graph.cpp  Graph.h  Objects.cpp  Objects.h  Point.h  Program_Window.h  Window.cpp  Window.h  fltk.h  fltk_design.h
lib/graph_lib_old/ext/: graph.h
lib/old_graph_lib/: Graph.cpp
network/src/Neural_Network/: Network.cpp  Network.h
network/src/Neuronal_Network/: Network.cpp  Network.h
src/: main.cpp  window_with_neuro.h
src/Neural_Network/: Network.cpp  Network.h  normalization_funcs.h
src/dataset/: dataset_reader.cpp  dataset_reader.h
src/gui/: gui.cpp  gui.h
tests/: dataset_generator.py  graph_test.py
weights/: weights_CO2.csv  weights_NOX.csv  weights_PM.csv  weights_SO2.csv  weights_VOC.csv
